--- a/index.html
+++ b/index.html
@@ -30,52 +30,52 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
+            <li id="card1" class="card">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li id="card2" class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card match">
+            <li id="card3" class="card">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li id="card4" class="card">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li id="card5" class="card">
                 <i class="fa fa-cube"></i>
             </li>
-            <li class="card match">
+            <li id="card6" class="card">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+            <li id="card7" class="card">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li id="card8" class="card">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li id="card9" class="card">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+            <li id="card10" class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+            <li id="card11" class="card">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+            <li id="card12" class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+            <li id="card13" class="card">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+            <li id="card14" class="card">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+            <li id="card15" class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+            <li id="card16" class="card">
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
